Change database to use utf8mb4 & convert existing databases

Requires a database version upgrade, which includes column length changes.
Basic tests done and seems to work, but would definitely benefit from extra
reviews and testing.

BUG: 462268